# search_engine

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  LICENSE  README.md  main.cpp  sonar-project.properties
.github/workflows/: build.yml  sonar.yml
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: answers.json  config.json  file001.txt  requests.json
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: tests.cpp
